# HW1-FAST-AQ-Parser

./: README.md  pyproject.toml
seqparser/: seq.py
tests/: good_single.fa  good_two.fa  test_parsers.py  test_transcribe.py
